# CarrotEngine

./: CMakeCache.txt  CMakeLists.txt  CarrotEngine  Makefile  README.md  cmake_install.cmake
Data/: TestShader.fs  TestShader.vs
Scripts/: Config.h.in
Scripts/Linux/: CMakeLists.txt  Install_OpenGL.sh  Install_SDL2.sh
Scripts/Linux/Main/: Build.sh  BuildAndRun.sh  Configure.sh  Run.sh
Scripts/Windows/: CMakeLists.txt
src/: main.cpp
src/Engine/: CarrotCore.h  Config.h  Engine.cpp  Engine.h
src/Engine/Core/: Object.cpp  Object.h
src/Engine/Core/Interfaces/: Interface.h
src/Engine/Core/Interfaces/Common/Update/: IUpdateable.cpp  IUpdateable.h
src/Engine/Includes/: STLIncludes.h
src/Engine/Macros/: Macro.h
src/Engine/Macros/Private/: CommonPrivate.h  MacroCrossPlatform.h  MacroSystemPrivate.h
src/Engine/Macros/Public/: Enum.h  MacroMemory.h  MacroPlatform.h  MacroSystem.h
src/Engine/System/LogSystem/: Log.cpp  Log.h
src/Engine/System/Managers/: EventsManager.cpp  EventsManager.h  FileManager.cpp  FileManager.h  Manager.h  UpdateManager.cpp  UpdateManager.h
src/Engine/System/Managers/Performance/: FPSManager.cpp  FPSManager.h
src/Engine/System/Managers/Rendering/: RenderSystem.cpp  RenderSystem.h
src/Engine/System/Other/Delegate/: Delegate.h  EventObject.h
src/Engine/System/Other/Multithreading/: Thread.cpp  Thread.h  ThreadObject.cpp  ThreadObject.h  ThreadTaskExecutor.cpp  ThreadTaskExecutor.h
src/Engine/System/Window/: Window.cpp  Window.h  WindowBase.cpp  WindowBase.h
src/Engine/System/Window/Linux/: Window_Linux.h
src/Engine/System/Window/Platform/: Window_Linux.cpp  Window_Linux.h
